arrangement du code après verification de w3c validator

--- a/inscription.html
+++ b/inscription.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Inscription</title>
 
-    <link rel="stylesheet" href="/Assets/CSS/inscription.css" />
+    <link rel="stylesheet" href="/Assets/CSS/inscription.css" >
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 
@@ -14,7 +14,7 @@
     <header>
         <div class="header__content mw-1320" >
           <nav> 
-            <a href="/index.html"><img id="logo" src="/Assets/Image/logo.svg" alt="logo du site" /></a>
+            <a href="/index.html"><img id="logo" src="/Assets/Image/logo.svg" alt="logo du site"></a>
             <a class="Nav__link" href="/index.html">Acceuil</a>
             <div class="Nav__dropdown">
               <a class="Nav__dropbtn" href="#">Recettes <img class="Nav__dropArrow" src="/Assets/Image/arrow-drop-down-line.svg" alt=""></a>
@@ -29,8 +29,8 @@
           </nav>
           <div class="nav-right">
             <div>
-              <input class="searchBar" type="text" placeholder="Votre recherche" />
-              <img class="search-logo" src="/Assets/Image/search-solid-white.svg" alt="search icon"/>
+              <input class="searchBar" type="text" placeholder="Votre recherche">
+              <img class="search-logo" src="/Assets/Image/search-solid-white.svg" alt="search icon">
             </div>
             <div>
                 <a class="nav-right__user-icon__contener" href="/inscription.html"><img class="nav-right__user-icon" src="/Assets/Image/user-solid.svg" alt="icon user"></a>
@@ -93,25 +93,22 @@
               <img
                 class="footer__social-icon"
                 src="/Assets/Image/facebook-box-line.svg"
-                alt="logo facebook"
-              />
+                alt="logo facebook">
               <img
                 class="footer__social-icon"
                 src="/Assets/Image/instagram-line.svg"
-                alt="logo instagram"
-              />
+                alt="logo instagram">
               <img
                 class="footer__social-icon"
                 src="/Assets/Image/twitter-line.svg"
-                alt="logo twitter"
-              />
+                alt="logo twitter">
             </div>
           </div>
           <div class="footer__Part3">
             <p>Abonnez-vous à notre NewsLetter</p>
             <label for="email" class="input__name" >Email :</label>
-            <input type="text" id="input__email" name="email" />
-            <input type="checkbox" />
+            <input type="text" id="input__email" name="email">
+            <input type="checkbox">
             <label class="footer__checkmark-container">
               Sed qui rem voluptatem aut ipsum itaque sequi et Sit aut voluptas
               alias doloribus voluptatem corrupti et ut.
