--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Let's Cook</title>
-    <link rel="stylesheet" href="/Assets/CSS/style.css" />
+    <link rel="stylesheet" href="/Assets/CSS/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Comfortaa:wght@700&family=Roboto&display=swap" rel="stylesheet">
@@ -13,7 +13,7 @@
     <header>
       <div class="header__content mw-1320" >
         <nav> 
-          <a href="/index.html"><img id="logo" src="/Assets/Image/logo.svg" alt="logo du site" /></a>
+          <a href="/index.html"><img id="logo" src="/Assets/Image/logo.svg" alt="logo du site"></a>
           <a class="Nav__link" href="/index.html">Acceuil</a>
           <div class="Nav__dropdown">
             <a class="Nav__dropbtn" href="#">Recettes <img class="Nav__dropArrow" src="/Assets/Image/arrow-drop-down-line.svg" alt=""></a>
@@ -28,8 +28,8 @@
         </nav>
         <div class="nav-right">
           <div>
-            <input class="searchBar" type="text" placeholder="Votre recherche" />
-            <img class="search-logo" src="/Assets/Image/search-solid-white.svg" alt="search icon"/>
+            <input class="searchBar" type="text" placeholder="Votre recherche">
+            <img class="search-logo" src="/Assets/Image/search-solid-white.svg" alt="search icon">
           </div>
           <div>
             <a class="nav-right__user-icon__contener" href="/inscription.html"><img class="nav-right__user-icon" src="/Assets/Image/user-solid.svg" alt="icon user"></a>
@@ -48,7 +48,7 @@
             </div>
             <div class="article__hover-contener">
               <img class="article__hover-icon" src="/Assets/Image/arrow-up-right-from-square-solid.svg" alt="">
-              <img class="article__img" loading="lazy" src="/Assets/Image/plat1.jpg" alt="" />
+              <img class="article__img" loading="lazy" src="/Assets/Image/plat1.jpg" alt="">
             </div>
             <div class="article__txt">
               <h3>iure sequi beatae</h3>
@@ -57,18 +57,15 @@
                 <img
                   class="star"
                   src="/Assets/Image/star-fill.svg"
-                  alt="star1"
-                />
+                  alt="star1">
                 <img
                   class="star"
                   src="/Assets/Image/star-fill.svg"
-                  alt="star2"
-                />
+                  alt="star2">
                 <img
                   class="star"
                   src="/Assets/Image/star-fill.svg"
-                  alt="star3"
-                />
+                  alt="star3">
               </div>
               <p>
                 Est consequatur molestiae. Voluptatem mollitia excepturi autem
@@ -87,7 +84,7 @@
             </div>
             <div class="article__hover-contener">
               <img class="article__hover-icon" src="/Assets/Image/arrow-up-right-from-square-solid.svg" alt="">
-              <img class="article__img" loading="lazy" src="/Assets/Image/plat2.jpg" alt="" />
+              <img class="article__img" loading="lazy" src="/Assets/Image/plat2.jpg" alt="">
             </div>
             <div class="article__txt">
               <h3>repudiandae sit illum</h3>
@@ -96,18 +93,15 @@
                 <img
                   class="star"
                   src="/Assets/Image/star-fill.svg"
-                  alt="star1"
-                />
+                  alt="star1">
                 <img
                   class="star"
                   src="/Assets/Image/star-fill.svg"
-                  alt="star2"
-                />
+                  alt="star2">
                 <img
                   class="star"
                   src="/Assets/Image/star-fill.svg"
-                  alt="star3"
-                />
+                  alt="star3">
               </div>
               <p>
                 Est consequatur molestiae. Voluptatem mollitia excepturi autem
@@ -126,7 +120,7 @@
             </div>
             <div class="article__hover-contener">
               <img class="article__hover-icon" src="/Assets/Image/arrow-up-right-from-square-solid.svg" alt="">
-              <img class="article__img" loading="lazy" src="/Assets/Image/plat3.jpg" alt="" />
+              <img class="article__img" loading="lazy" src="/Assets/Image/plat3.jpg" alt="">
             </div>
             <div class="article__txt">
               <h3>consequatur cum ratione</h3>
@@ -135,18 +129,15 @@
                 <img
                   class="star"
                   src="/Assets/Image/star-fill.svg"
-                  alt="star1"
-                />
+                  alt="star1">
                 <img
                   class="star"
                   src="/Assets/Image/star-fill.svg"
-                  alt="star2"
-                />
+                  alt="star2">
                 <img
                   class="star"
                   src="/Assets/Image/star-fill.svg"
-                  alt="star3"
-                />
+                  alt="star3">
               </div>
               <p>
                 Est consequatur molestiae. Voluptatem mollitia excepturi autem
@@ -165,7 +156,7 @@
             </div>
             <div class="article__hover-contener">
               <img class="article__hover-icon" src="/Assets/Image/arrow-up-right-from-square-solid.svg" alt="">
-              <img class="article__img" loading="lazy" src="/Assets/Image/plat4.jpg" alt="" />
+              <img class="article__img" loading="lazy" src="/Assets/Image/plat4.jpg" alt="">
             </div>
             <div class="article__txt">
               <h3>repudiandae occaecati omnis</h3>
@@ -174,18 +165,15 @@
                 <img
                   class="star"
                   src="/Assets/Image/star-fill.svg"
-                  alt="star1"
-                />
+                  alt="star1">
                 <img
                   class="star"
                   src="/Assets/Image/star-fill.svg"
-                  alt="star2"
-                />
+                  alt="star2">
                 <img
                   class="star"
                   src="/Assets/Image/star-fill.svg"
-                  alt="star3"
-                />
+                  alt="star3">
               </div>
               <p>
                 Est consequatur molestiae. Voluptatem mollitia excepturi autem
@@ -204,7 +192,7 @@
             </div>
             <div class="article__hover-contener">
               <img class="article__hover-icon" src="/Assets/Image/arrow-up-right-from-square-solid.svg" alt="">
-              <img class="article__img" loading="lazy" src="/Assets/Image/plat5.jpg" alt="" />
+              <img class="article__img" loading="lazy" src="/Assets/Image/plat5.jpg" alt="">
             </div>
             <div class="article__txt">
               <h3>natus magnam porro</h3>
@@ -213,18 +201,15 @@
                 <img
                   class="star"
                   src="/Assets/Image/star-fill.svg"
-                  alt="star1"
-                />
+                  alt="star1">
                 <img
                   class="star"
                   src="/Assets/Image/star-fill.svg"
-                  alt="star2"
-                />
+                  alt="star2">
                 <img
                   class="star"
                   src="/Assets/Image/star-fill.svg"
-                  alt="star3"
-                />
+                  alt="star3">
               </div>
               <p>
                 Est consequatur molestiae. Voluptatem mollitia excepturi autem
@@ -243,7 +228,7 @@
             </div>
             <div class="article__hover-contener">
               <img class="article__hover-icon" src="/Assets/Image/arrow-up-right-from-square-solid.svg" alt="">
-              <img class="article__img" loading="lazy" src="/Assets/Image/plat6.jpg" alt="" />
+              <img class="article__img" loading="lazy" src="/Assets/Image/plat6.jpg" alt="">
             </div>
             <div class="article__txt">
               <h3>suscipit cumque qui</h3>
@@ -252,18 +237,15 @@
                 <img
                   class="star"
                   src="/Assets/Image/star-fill.svg"
-                  alt="star1"
-                />
+                  alt="star1">
                 <img
                   class="star"
                   src="/Assets/Image/star-fill.svg"
-                  alt="star2"
-                />
+                  alt="star2">
                 <img
                   class="star"
                   src="/Assets/Image/star-fill.svg"
-                  alt="star3"
-                />
+                  alt="star3">
               </div>
               <p>
                 Est consequatur molestiae. Voluptatem mollitia excepturi autem
@@ -282,7 +264,7 @@
             </div>
             <div class="article__hover-contener">
               <img class="article__hover-icon" src="/Assets/Image/arrow-up-right-from-square-solid.svg" alt="">
-              <img class="article__img" loading="lazy" src="/Assets/Image/plat7.jpg" alt="" />
+              <img class="article__img" loading="lazy" src="/Assets/Image/plat7.jpg" alt="">
             </div>
             <div class="article__txt">
               <h3>accusamus est illum</h3>
@@ -291,18 +273,15 @@
                 <img
                   class="star"
                   src="/Assets/Image/star-fill.svg"
-                  alt="star1"
-                />
+                  alt="star1">
                 <img
                   class="star"
                   src="/Assets/Image/star-fill.svg"
-                  alt="star2"
-                />
+                  alt="star2">
                 <img
                   class="star"
                   src="/Assets/Image/star-fill.svg"
-                  alt="star3"
-                />
+                  alt="star3">
               </div>
               <p>
                 Est consequatur molestiae. Voluptatem mollitia excepturi autem
@@ -321,7 +300,7 @@
             </div>
             <div class="article__hover-contener">
               <img class="article__hover-icon" src="/Assets/Image/arrow-up-right-from-square-solid.svg" alt="">
-              <img class="article__img" loading="lazy" src="/Assets/Image/plat8.jpg" alt="" />
+              <img class="article__img" loading="lazy" src="/Assets/Image/plat8.jpg" alt="">
             </div>
             <div class="article__txt">
               <h3>praesentium et similique</h3>
@@ -330,18 +309,15 @@
                 <img
                   class="star"
                   src="/Assets/Image/star-fill.svg"
-                  alt="star1"
-                />
+                  alt="star1">
                 <img
                   class="star"
                   src="/Assets/Image/star-fill.svg"
-                  alt="star2"
-                />
+                  alt="star2">
                 <img
                   class="star"
                   src="/Assets/Image/star-fill.svg"
-                  alt="star3"
-                />
+                  alt="star3">
               </div>
               <p>
                 Est consequatur molestiae. Voluptatem mollitia excepturi autem
@@ -360,7 +336,7 @@
             </div>
             <div class="article__hover-contener">
               <img class="article__hover-icon" src="/Assets/Image/arrow-up-right-from-square-solid.svg" alt="">
-              <img class="article__img" loading="lazy" src="/Assets/Image/plat9.jpg" alt="" />
+              <img class="article__img" loading="lazy" src="/Assets/Image/plat9.jpg" alt="">
             </div>
             <div class="article__txt">
               <h3>esse architecto adipisci</h3>
@@ -369,18 +345,15 @@
                 <img
                   class="star"
                   src="/Assets/Image/star-fill.svg"
-                  alt="star1"
-                />
+                  alt="star1">
                 <img
                   class="star"
                   src="/Assets/Image/star-fill.svg"
-                  alt="star2"
-                />
+                  alt="star2">
                 <img
                   class="star"
                   src="/Assets/Image/star-fill.svg"
-                  alt="star3"
-                />
+                  alt="star3">
               </div>
               <p>
                 Est consequatur molestiae. Voluptatem mollitia excepturi autem
@@ -399,7 +372,7 @@
             </div>
             <div class="article__hover-contener">
               <img class="article__hover-icon" src="/Assets/Image/arrow-up-right-from-square-solid.svg" alt="">
-              <img class="article__img" loading="lazy" src="/Assets/Image/plat10.jpg" alt="" />
+              <img class="article__img" loading="lazy" src="/Assets/Image/plat10.jpg" alt="">
             </div>
             <div class="article__txt">
               <h3>autem nesciunt dolores</h3>
@@ -408,18 +381,15 @@
                 <img
                   class="star"
                   src="/Assets/Image/star-fill.svg"
-                  alt="star1"
-                />
+                  alt="star1">
                 <img
                   class="star"
                   src="/Assets/Image/star-fill.svg"
-                  alt="star2"
-                />
+                  alt="star2">
                 <img
                   class="star"
                   src="/Assets/Image/star-fill.svg"
-                  alt="star3"
-                />
+                  alt="star3">
               </div>
               <p>
                 Est consequatur molestiae. Voluptatem mollitia excepturi autem
@@ -438,7 +408,7 @@
             </div>
             <div class="article__hover-contener">
               <img class="article__hover-icon" src="/Assets/Image/arrow-up-right-from-square-solid.svg" alt="">
-              <img class="article__img" loading="lazy" src="/Assets/Image/plat11.jpg" alt="" />
+              <img class="article__img" loading="lazy" src="/Assets/Image/plat11.jpg" alt="">
             </div>
             <div class="article__txt">
               <h3>tempore voluptatem in</h3>
@@ -447,18 +417,15 @@
                 <img
                   class="star"
                   src="/Assets/Image/star-fill.svg"
-                  alt="star1"
-                />
+                  alt="star1">
                 <img
                   class="star"
                   src="/Assets/Image/star-fill.svg"
-                  alt="star2"
-                />
+                  alt="star2">
                 <img
                   class="star"
                   src="/Assets/Image/star-fill.svg"
-                  alt="star3"
-                />
+                  alt="star3">
               </div>
               <p>
                 Est consequatur molestiae. Voluptatem mollitia excepturi autem
@@ -477,7 +444,7 @@
             </div>
             <div class="article__hover-contener">
               <img class="article__hover-icon" src="/Assets/Image/arrow-up-right-from-square-solid.svg" alt="">
-              <img class="article__img" loading="lazy" src="/Assets/Image/plat12.jpg" alt="" />
+              <img class="article__img" loading="lazy" src="/Assets/Image/plat12.jpg" alt="">
             </div>
             <div class="article__txt">
               <h3>nihil veniam doloribus</h3>
@@ -486,18 +453,15 @@
                 <img
                   class="star"
                   src="/Assets/Image/star-fill.svg"
-                  alt="star1"
-                />
+                  alt="star1">
                 <img
                   class="star"
                   src="/Assets/Image/star-fill.svg"
-                  alt="star2"
-                />
+                  alt="star2">
                 <img
                   class="star"
                   src="/Assets/Image/star-fill.svg"
-                  alt="star3"
-                />
+                  alt="star3">
               </div>
               <p>
                 Est consequatur molestiae. Voluptatem mollitia excepturi autem
@@ -530,25 +494,22 @@
             <img
               class="footer__social-icon"
               src="/Assets/Image/facebook-box-line.svg"
-              alt="logo facebook"
-            />
+              alt="logo facebook">
             <img
               class="footer__social-icon"
               src="/Assets/Image/instagram-line.svg"
-              alt="logo instagram"
-            />
+              alt="logo instagram">
             <img
               class="footer__social-icon"
               src="/Assets/Image/twitter-line.svg"
-              alt="logo twitter"
-            />
+              alt="logo twitter">
           </div>
         </div>
         <div class="footer__Part3">
           <p>Abonnez-vous à notre NewsLetter</p>
-          <label for="email" class="input__name" >Email :</label>
-          <input type="text" id="input__email" name="email" />
-          <input type="checkbox" />
+          <label for="input__email" class="input__name" >Email :</label>
+          <input type="text" id="input__email" name="email">
+          <input type="checkbox">
           <label class="footer__checkmark-container">
             Sed qui rem voluptatem aut ipsum itaque sequi et Sit aut voluptas
             alias doloribus voluptatem corrupti et ut.
